# fAIr-utilities

./: .dockerignore  .gitignore  .pre-commit-config.yaml  BRANCH_CREATION_SUMMARY.md  CHANGELOG.md  CI_CD_STATUS_REPORT.md  CI_CD_TESTING_GUIDE.md  Dockerfile  Dockerfile.ramp  Dockerfile.yolo  EFFICIENTNET_COMPATIBILITY.md  FINAL_REPORT.md  FINAL_TEST_RESULTS.md  GDAL_ERROR_SOLUTION_COMPLETE.md  INTEGRATION_CHECKLIST_FINAL.md  INTEGRATION_COMPLETION_SUMMARY.md  INTEGRATION_GUIDE.md  INTEGRATION_SUMMARY.md  MANIFEST.in  MIGRATION_STATUS_UPDATE.md  PACKAGE_ARCHITECTURE_MIGRATION.md  PACKAGE_MIGRATION_COMPLETE.md  PEP517_INSTALLATION_FIX.md  PYPROJECT_FIX_SUMMARY.md  PYTHON_VERSION_COMPATIBILITY.md  Package_Test.ipynb  README.md  REFACTORING_SUMMARY.md  SETUP_PY_FIX.md  SETUP_PY_INSTALLATION_FIX_COMPLETE.md  TENSORFLOW_KERAS_COMPATIBILITY.md  VERIFICATION.md  WORKFLOW_TESTING_SUMMARY.md  WORKFLOW_TEST_RESULTS.md  WORKFLOW_TEST_SUITE.py  WORKFLOW_VALIDATION_CHECKLIST.md  annas_test.ipynb  comprehensive_final_test.py  docker-compose.yaml  docker-requirements.txt  (+43 more)
.github/actions/setup-gdal/: action.yml
.github/workflows/: build.yml  build_test_pypi.yaml  docker-build.yml  docker-publish.yml  test-basic.yml  test-migration.yml  upload.yml
docker/: Dockerfile.ramp  Dockerfile.yolo
docker/ramp/: docker-requirements.txt
docs/: Installation.html  README.md  Version_control.md  hotlib.html  sample-benchmark-datasets.md  training_datasets.csv
docs/_static/: documentation_options.js
docs/benchmark/: sample-datasets.md
docs/source/: conf.py  hotlib.rst  index.rst  installation.rst
examples/: integrated_workflow_example.py
fAIr-lib-python/: __init__.py
fAIr-lib-python/inference/: predict.py
fAIr-lib-python/postprocessing/: building_footprint.py  get_polygons.py  polygonize.py
fAIr-lib-python/preprocessing/: clip_labels.py  reproject_labels.py
fAIr-lib-python/training/: prepare_data.py
fairlib/: __init__.py  georeferencing.py  utils.py
fairlib/inference/: utils.py
fairlib/postprocessing/: __init__.py  polygonize.py  vectorize.py
fairlib/preprocessing/: fix_labels.py
fairlib/training/: cleanup.py  prepare_data.py  run_training.py  train.py
hot_fair_utilities/: __init__.py  _logging.py  config.py  dependency_resolver.py  georeferencing.py  monitoring.py  utils.py  validation.py
hot_fair_utilities/data_acquisition/: __init__.py  osm_downloader.py  tms_downloader.py
hot_fair_utilities/inference/: __init__.py  enhanced_predict.py  evaluate.py  predict.py  utils.py
hot_fair_utilities/model/: yolo.py
hot_fair_utilities/postprocessing/: __init__.py  building_footprint.py  get_polygons.py  merge_polygons.py  polygonize.py  utils.py  vectorize.py
hot_fair_utilities/preprocessing/: __init__.py  _multimask_vendored.py  clip_labels.py  fix_labels.py  multimasks_from_polygons.py  preprocess.py  reproject_labels.py  yolo_format.py
hot_fair_utilities/preprocessing/yolo_v11_sam/: utils.py  yolo_format.py
hot_fair_utilities/preprocessing/yolo_v8/: __init__.py  utils.py  yolo_format.py
hot_fair_utilities/preprocessing/yolo_v8_v1/: yolo_format.py
hot_fair_utilities/preprocessing/yolo_v8_v2/: __init__.py  preprocess.py  utils.py  yolo_format.py
hot_fair_utilities/training/: __init__.py  cleanup.py  prepare_data.py  ramp_config_base.json  run_training.py  train.py
hot_fair_utilities/training/ramp/: __init__.py  cleanup.py  config.py  prepare_data.py  ramp_config_base.json  run_training.py  train.py
hot_fair_utilities/training/yolo_v11/: train.py
hot_fair_utilities/training/yolo_v11_sam/: train.py
hot_fair_utilities/training/yolo_v8/: __init__.py  train.py
hot_fair_utilities/training/yolo_v8_v1/: train.py
hot_fair_utilities/training/yolo_v8_v2/: train.py
hot_fair_utilities/vectorization/: __init__.py  orthogonalize.py  regularizer.py
ipynb/: check_cuda.ipynb  prepare_v11_obb_model.ipynb  test_yolo_v11_sam.ipynb  yolo_sam.ipynb  yolo_sam_obb.ipynb
ramp-data/: ramp_HOTOSM_config_finetune_1.json  ramp_HOTOSM_config_finetune_2.json  ramp_HOTOSM_config_finetune_3.json  ramp_HOTOSM_config_finetune_4.json  ramp_HOTOSM_config_finetune_5.json
ramp-data/TRAIN/HOTOSM/2/: chips_labels.geojson  v2_2_chipstats.csv  v2_2_chipstats.geojson  v2_2_chipstats.xlsx  val-chips-v2-2.csv
ramp-data/TRAIN/HOTOSM/2/binarymasks/: OAM-1238448-1046528-21.mask.tif  OAM-1238448-1046529-21.mask.tif  OAM-1238448-1046530-21.mask.tif  OAM-1238448-1046531-21.mask.tif  OAM-1238448-1046532-21.mask.tif  OAM-1238448-1046533-21.mask.tif  OAM-1238448-1046534-21.mask.tif  OAM-1238448-1046535-21.mask.tif  OAM-1238449-1046528-21.mask.tif  OAM-1238449-1046529-21.mask.tif  OAM-1238449-1046530-21.mask.tif  OAM-1238449-1046531-21.mask.tif  OAM-1238449-1046532-21.mask.tif  OAM-1238449-1046533-21.mask.tif  OAM-1238449-1046534-21.mask.tif  OAM-1238449-1046535-21.mask.tif  OAM-1238450-1046528-21.mask.tif  OAM-1238450-1046529-21.mask.tif  OAM-1238450-1046530-21.mask.tif  OAM-1238450-1046531-21.mask.tif  OAM-1238450-1046532-21.mask.tif  OAM-1238450-1046533-21.mask.tif  OAM-1238450-1046534-21.mask.tif  OAM-1238450-1046535-21.mask.tif  OAM-1238451-1046528-21.mask.tif  OAM-1238451-1046529-21.mask.tif  OAM-1238451-1046530-21.mask.tif  OAM-1238451-1046531-21.mask.tif  OAM-1238451-1046532-21.mask.tif  OAM-1238451-1046533-21.mask.tif  OAM-1238451-1046534-21.mask.tif  OAM-1238451-1046535-21.mask.tif  OAM-1238452-1046528-21.mask.tif  OAM-1238452-1046529-21.mask.tif  OAM-1238452-1046530-21.mask.tif  OAM-1238452-1046531-21.mask.tif  OAM-1238452-1046532-21.mask.tif  OAM-1238452-1046533-21.mask.tif  OAM-1238452-1046534-21.mask.tif  OAM-1238452-1046535-21.mask.tif  (+78 more)
ramp-data/TRAIN/HOTOSM/2/chips/: OAM-1238448-1046528-21.tif  OAM-1238448-1046529-21.tif  OAM-1238448-1046530-21.tif  OAM-1238448-1046531-21.tif  (+114 more)
ramp-data/predictions/: OAM-309606-261636-19.tif  OAM-309612-261632-19.tif  prediction.geojson
ramp-data/sample_1/image_input/: labels.geojson
ramp-data/training_1_all_data/: labels.geojson
tests/: __init__.py  test_data_acquisition.py  test_vectorization.py
yolo_v2/: annas_test.ipynb
(+2829 files in other folders)
