[project]
name = "hot-fair-utilities"
version = "4.0.0"
description = "Utilities for AI assisted mapping workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
maintainers = [
    { name = "Kshitij Raj Sharma", email = "krschap@proton.me" },
]
dependencies = [
    "geomltoolkits>=2.0.2",
    "geopandas>=0.14,<1 ; python_version == '3.11'",
    "geopandas>=1.0,<2 ; python_version != '3.11'",
    "matplotlib>=3.10.8",
    "mercantile>=1.2.1",
    "numpy>=1.26",
    "opencv-python-headless>=4.10",
    "pandas>=2.3.3",
    "pillow>=12.1.1",
    "rasterio>=1.4.4",
    "requests>=2.32.5",
    "rich>=14.0",
]

[project.optional-dependencies]
predict = [
    "fairpredictor>=0.5.0",
]
ramp = [
    "numpy<2 ; python_version == '3.11'",
    "gdal[numpy]==3.8.4 ; python_version == '3.11'",
    "keras<3 ; python_version == '3.11'",
    "shapely<2 ; python_version == '3.11'",
    "ramp-fair==0.1.2 ; python_version == '3.11'",
    "scikit-fmm ; python_version == '3.11'",
    "segmentation-models ; python_version == '3.11'",
    "solaris ; python_version == '3.11'",
    "tensorflow==2.15.1 ; python_version == '3.11'",
]
ramp-gpu = [
    "numpy<2 ; python_version == '3.11'",
    "gdal[numpy]==3.8.4 ; python_version == '3.11'",
    "keras<3 ; python_version == '3.11'",
    "shapely<2 ; python_version == '3.11'",
    "ramp-fair==0.1.2 ; python_version == '3.11'",
    "scikit-fmm ; python_version == '3.11'",
    "segmentation-models ; python_version == '3.11'",
    "solaris ; python_version == '3.11'",
    "tensorflow[and-cuda]==2.15.1 ; python_version == '3.11'",
]
yolo-cpu = [
    "onnx>=1.19.1 ; python_version >= '3.12'",
    "onnxruntime>=1.23.2 ; python_version >= '3.12'",
    "onnxslim>=0.1.68 ; python_version >= '3.12'",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "ultralytics>=8.4.27",
]
yolo-gpu = [
    "onnx>=1.19.1 ; python_version >= '3.12'",
    "onnxruntime>=1.23.2 ; python_version >= '3.12'",
    "onnxslim>=0.1.68 ; python_version >= '3.12'",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "ultralytics>=8.4.27",
]

[dependency-groups]
lint = [
    "pre-commit>=4.3.0",
    "ruff>=0.15.7",
]
typecheck = [
    "ty>=0.0.25",
]
test = [
    "pytest>=9.0.2",
]
release = [
    "commitizen>=4.13.9",
]
dev = [
	{ include-group = "lint" },
	{ include-group = "typecheck" },
	{ include-group = "test" },
	{ include-group = "release" },
]

[build-system]
requires = ["uv_build>=0.11.1,<0.12"]
build-backend = "uv_build"

[tool.uv]
default-groups = ["dev"]
conflicts = [
    [
        { extra = "yolo-cpu" },
        { extra = "yolo-gpu" },
    ],
]

[tool.uv.sources]
solaris = [
    { git = "https://github.com/kshitijrajsharma/solaris", branch = "main", extra = "ramp" },
    { git = "https://github.com/kshitijrajsharma/solaris", branch = "main", extra = "ramp-gpu" },
]
torch = [
    { index = "pytorch-cpu", extra = "yolo-cpu" },
    { index = "pytorch-cu130", extra = "yolo-gpu" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "yolo-cpu" },
    { index = "pytorch-cu130", extra = "yolo-gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.extra-build-dependencies]
gdal = [
    "numpy>=1.26",
    "setuptools>=67",
    "wheel",
]

[tool.uv.build-backend]
module-root = ""
module-name = "hot_fair_utilities"
source-include = ["hot_fair_utilities/training/ramp/ramp_config_base.json"]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
	"docker",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.rules]
unresolved-import = "ignore"

[tool.ty.src]
exclude = ["docker"]

[tool.pytest.ini_options]
python_files = ["test_*.py"]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "uv"
version_scheme = "pep440"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
